k8s/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    dash.ulagbulag.io/subject: mobilex-exp
spec:
  selector:
    matchLabels:
      app: backend
      dash.ulagbulag.io/subject: mobilex-exp
  template:
    metadata:
      labels:
        app: backend
        dash.ulagbulag.io/subject: mobilex-exp
    spec:
      containers:
        - name: server
          # TODO(user): change to your image
          image: docker.io/sunmyung/mobilex-exp-backend:v0.1
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
          volumeMounts:
            - name: huggingface-hub-token
              mountPath: /root/.cache/huggingface/token
              subPath: token
      volumes:
        - name: huggingface-hub-token
          secret:
            optional: true
            secretName: huggingface-hub
            items:
              - key: HUGGING_FACE_HUB_TOKEN
                path: token
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    dash.ulagbulag.io/subject: mobilex-exp
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
