k8s/huggingface-tgi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huggingface-tgi
  labels:
    app: huggingface-tgi
spec:
  selector:
    matchLabels:
      app: huggingface-tgi
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        app: huggingface-tgi
    spec:
      containers:
        - name: huggingface-tgi
          image: ghcr.io/huggingface/text-generation-inference:2.0
          args:
            - --otlp-endpoint
            - $(OTEL_EXPORTER_OTLP_ENDPOINT)
          resources:
            limits:
              cpu: "4"
              memory: "12Gi"
              nvidia.com/gpu: "2"
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: cache
              mountPath: /data
            - name: dshm
              mountPath: /dev/shm
            - name: huggingface-hub-token
              mountPath: /root/.cache/huggingface/token
              subPath: token
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: huggingface-hub-cache
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: huggingface-hub-token
          secret:
            secretName: huggingface-hub
            items:
              - key: HUGGING_FACE_HUB_TOKEN
                path: token
---
apiVersion: v1
kind: Service
metadata:
  name: huggingface-tgi
  labels:
    app: huggingface-tgi
spec:
  type: ClusterIP
  selector:
    app: huggingface-tgi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
